# HAL-feather-m0

./: CMakeLists.txt  Chip.hpp  ClockCycles.hpp  CompileAll.cpp  DateTime.cpp  DateTime.hpp  EnumStringMap.hpp  ExtInt_SAMD21.cpp  ExtInt_SAMD21.hpp  Fixed16.hpp  Flags.hpp  FreeMemory_SAMD21.cpp  GPIO_Arduino.cpp  GPIO_FeatherM0.hpp  GPIO_Pin_FeatherM0.hpp  GPIO_Pin_SAMD21.hpp  GPIO_SAMD21.cpp  GPIO_SAMD21.hpp  InterruptLock_Arduino.cpp  InterruptLock_SAMD21.cpp  README.md  Reset_SAMD21.cpp  Reset_SAMD21.hpp  SerialLine.hpp  SerialLine_ArduinoUSB.cpp  SerialLine_ArduinoUSB.hpp  SerialLine_USB.cpp  SerialLine_USB.hpp  String.cpp  String.hpp  Timer_Arduino.cpp  Timer_SAMD21.cpp  Watchdog_SAMD21.cpp  WireMaster_FeatherM0.cpp  WireMaster_FeatherM0.hpp  WireMaster_SAMD21.cpp  WireMaster_SAMD21.hpp
common/: Direction.hpp  WritingDirection.hpp
usb/: ACMFunctionalDescriptor.hpp  CDC.cpp  CDC.hpp  CDCCSInterfaceDescriptor.hpp  CDCCSInterfaceDescriptor4.hpp  CDCDescriptor.hpp  CMFunctionalDescriptor.hpp  CMakeLists.txt  ConfigDescriptor.hpp  Description.hpp  DescriptorType.hpp  DeviceClass.cpp  DeviceClass.hpp  DeviceDescriptor.hpp  DeviceInfo.hpp  DeviceWrapper.cpp  DeviceWrapper.hpp  DoubleBufferedEndPointHandler.cpp  DoubleBufferedEndPointHandler.hpp  EndPointHandler.hpp  EndpointDescriptor.hpp  IADDescriptor.hpp  InterfaceDescriptor.hpp  InterruptGuard.hpp  InterruptHandler.cpp  InterruptHandler.hpp  MSCDescriptor.hpp  PluggableUsb.cpp  PluggableUsb.hpp  Serial.cpp  Serial.hpp  Setup.hpp
usb/notused/: Host.cpp  Host.hpp
